# meterapp

./: CMakeLists.txt  Offline Strategy.md  README copy.md  README.md  SDKconfig Setting.md  SECURITY STRATEGY.md  batchflashdev.sh  cmds.md  flow.md  partitions copy.csv  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigS3  sdkconfigesp32
main/: AES key process.md  CMakeLists.txt  idf_component.yml
main/inc/: FramI2C.h  defines.h  forwards.h  globals.h  includes.h  meterClass.h  typedef.h
main/kbd/: cmdADC.cpp  cmdApp.cpp  cmdBaseTimer.cpp  cmdConfig.cpp  cmdErase.cpp  cmdFindUnit.cpp  cmdFram.cpp  cmdLog.cpp  cmdLogLevel.cpp  cmdMeter.cpp  cmdMetersreset.cpp  cmdNode.cpp  cmdOTA.cpp  cmdPrepaid.cpp  cmdResetConf.cpp  cmdSecurity.cpp  cmdSkip.cpp  cmdenDecrypt.cpp
main/src/: FramI2C.cpp  Programm Flow.md  Programm Flow.txt  adc.cpp  convertbintojson.cpp  displayManager.cpp  kbd.cpp  lcd.cpp  logmanager.cpp  mesh_netif.c  meter.cpp  meterClass.cpp  otaupdate.cpp  otaupdateorg.cpp  sendData.cpp  utils.cpp  webserver.cpp
main/src/cmd/: cmdDisplay.cpp  cmdEraseMetrics.cpp  cmdFormat.cpp  cmdHostOTA.cpp  cmdLock.cpp  cmdMQTT.cpp  cmdNetw.cpp  cmdOTA.cpp  cmdSendMetrics.cpp  cmdSetOTA.cpp  cmdUpdate.cpp
main/web/: badpass.html  confdone.html  index-min.html  index.html  params.html  test.xml
